@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.8.25-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-08-25 20:16:28, took 00:15:20, with 50 workers, on 844 cases, 0 failed, 0 traces, 1 retries<br/>
+tested: 2025-08-25 20:51:59, took 00:13:55, with 50 workers, on 844 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin, other: udp<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
