@@ -17483,3 +17483,6 @@ qc pass: wireguard over asymmetric ports
 ---------------------------------- 2025-08-25 19:40:53 25.8.25
 no qc pass: wireguard over asymmetric ports
 failed: wireguard over asymmetric ports
+---------------------------------- 2025-08-25 20:23:49 25.8.25
+no failed: wireguard over asymmetric ports
+qc pass: wireguard over asymmetric ports
